--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
   <div class="cta">
     <h2>היעד שלנו: 1,000,000$</h2>
     <p>כדי להפוך את ShutBrain™ למציאות, אנחנו צריכים אותך!</p>
-    <button onclick="alert('תודה שאתה איתנו – המוח שלך יכבה בקרוב!')">
-      אני תומך בפרויקט
+    <button onclick="window.location.href='signup.html';">
+      הרשמה לשלב הבטא
     </button>
   </div>
 
